--- a/assets/css/vof-pricing-modal-style.css
+++ b/assets/css/vof-pricing-modal-style.css
@@ -207,6 +207,41 @@ body .vof-pm-recommended-badge::before {
     100% { left: 100%; }
 }
 
+/* Tab Secondary Tab Badge */
+body .vof-pm-sTab-badge {
+    background-color: #A94F4E !important;
+    /* background-color: #D1FAB3 !important; */
+    color: white !important;
+    /* padding: 4px 8px !important; */
+    padding: 2px 12px !important;
+    border-radius: 12px !important;
+    border-style: solid !important;
+    font-size: 12px !important;
+    /* font-weight: 600!important; */
+    /* display: inline-block !important; */
+    /* margin-bottom: 12px !important; */
+    margin-left: 8px !important;
+    position: relative !important;
+    overflow: hidden !important;
+}
+
+body .vof-pm-sTab-badge::before {
+    content: '' !important;
+    position: absolute !important;
+    top: 0 !important;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        90deg,
+        transparent,
+        rgba(255, 255, 255, 0.5),
+        transparent
+    ) !important;
+    animation: vof-pm-shimmer 3s infinite !important;
+    transform: skewX(-30deg) !important;
+}
+
 /* Tier content */
 body .vof-pm-tier-name {
     font-size: 18px !important;
